# ds_timeseries

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: leadership_visuals.ipynb  walkthrough_your_data.ipynb
powerbi/: dax_measures.txt
scripts/: benchmark_baselines.py  benchmark_ml.py
src/ds_timeseries/: __init__.py
src/ds_timeseries/data/: __init__.py  toy_datasets.py  validation.py
src/ds_timeseries/evaluation/: __init__.py  cross_validation.py  metrics.py  plots.py
src/ds_timeseries/features/: __init__.py  calendar.py  engineering.py  lags.py
src/ds_timeseries/models/: __init__.py  base.py  baselines.py  ensemble.py  ml.py  neural.py  statistical.py  tuning.py
src/ds_timeseries/reconciliation/: __init__.py  hierarchy.py  methods.py
src/ds_timeseries/utils/: __init__.py  config.py
tests/: __init__.py  test_baselines.py  test_calendar.py  test_metrics.py
