[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ds_timeseries"
version = "0.1.0"
description = "Hierarchical time series forecasting library for Customer-Material sales prediction"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ryan" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "statsforecast>=1.5",
    "mlforecast>=0.10",
    "hierarchicalforecast>=0.3",
    "datasetsforecast>=1.0",
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

prophet = [
    "prophet>=1.1",
]

deep = [
    "pytorch-forecasting>=1.0",
    "torch>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ds_timeseries"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
